blogs/zero-trust/egress/petclinic.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-db
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: petclinic-db
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: petclinic-db
  labels:
    app: petclinic-db
spec:
  selector:
    matchLabels:
      app: petclinic-db
  serviceName: petclinic-db
  template:
    metadata:
      labels:
        app: petclinic-db
    spec:
      containers:
      - name: petclinic-db
        image: soloio/petclinic-db:log4shell
        ports:
        - containerPort: 3306
          protocol: TCP
          name: mysql
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: sql-data
      volumes:
      - name: sql-data
        emptyDir: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petclinic-vets
  name: petclinic-vets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-vets
  template:
    metadata:
      labels:
        app: petclinic-vets
    spec:
      containers:
      - command:
        - /petclinic-vet
        image: soloio/petclinic-vet@sha256:4bf705f28a032b2b3edd00ccaed58a7cb3ea6dedd005eecc2cde8e7a6ae71e70
        imagePullPolicy: IfNotPresent
        name: petclinic-vets
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-vets
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: petclinic-vets

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: petclinic
  labels:
    app: petclinic
spec:
  selector:
    matchLabels:
      app: petclinic
  serviceName: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: soloio/petclinic:log4shell
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: petclinic
